--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.2-4'
+    ext.kotlin_version = '1.1.1'
     ext.gradle_version = '2.3.2'
 
     repositories {
-        maven { url '/tmp/repos/' }
+        maven { url './buildrepos/' }
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-//        classpath 'me.yimu.malfurion:plugin:1.0.0'
+//        classpath 'com.douban.malfurion:plugin:1.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,7 +20,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url '/tmp/repos/' }
+        maven { url './buildrepos/' }
         jcenter()
     }
 }
