--- a/buildsrc/build.gradle
+++ b/buildsrc/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'groovy'
-apply plugin: 'kotlin'
+
+sourceCompatibility = JavaVersion.VERSION_1_6
+targetCompatibility = JavaVersion.VERSION_1_6
 
 buildscript {
-    ext.kotlin_version = '1.1.2-4'
     ext.gradle_version = '2.3.2'
 
     repositories {
@@ -11,7 +12,6 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -26,8 +26,26 @@ dependencies {
     // gradle sdk
     compile gradleApi()
     compile "com.android.tools.build:gradle:$gradle_version"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'org.ow2.asm:asm:5.0.3'
-    compile 'org.ow2.asm:asm-commons:5.0.3'
+    compile 'org.ow2.asm:asm:5.2'
+    compile 'org.ow2.asm:asm-commons:5.2'
 
+}
+
+apply plugin: 'maven'
+
+//group和version在后面使用自定义插件的时候会用到
+group='com.douban.malfurion'
+version='1.0.0'
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            //提交到远程服务器：
+            // repository(url: "http://www.xxx.com/repos") {
+            //    authentication(userName: "admin", password: "admin")
+            // }
+            //本地的Maven地址设置为D:/repos
+            repository(url: uri('../buildrepos'))
+        }
+    }
 }
