--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,30 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext.kotlin_version = '1.1.1'
+    ext.gradle_version = '2.3.2'
+
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath 'com.douban.malfurion:plugin:1.0.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    repositories {
+        jcenter()
+    }
+}
+
+// ------------------ module settings -----------------------------
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
