--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,3 +1,41 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+//    ext.kotlin_version = '1.1.1'
+    ext.gradle_version = '2.3.2'
+
+    repositories {
+        maven { url '/tmp/repos/' }
+        maven { url 'http://qaci.intra.douban.com/nexus/content/repositories/central' }
+        maven { url 'http://qaci.intra.douban.com/nexus/content/repositories/douban' }
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.2'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath 'com.douban.malfurion:plugin:1.0.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    repositories {
+        maven { url '/tmp/repos/' }
+        maven { url 'http://qaci.intra.douban.com/nexus/content/repositories/central' }
+        maven { url 'http://qaci.intra.douban.com/nexus/content/repositories/douban' }
+        maven { url 'http://qaci.intra.douban.com/nexus/content/repositories/douban-snapshot' }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url 'https://oss.sonatype.org/content/repositories/releases/' }
+        maven { url "https://jitpack.io" }
+        jcenter()
+    }
+}
+
+
+// ------------------ module settings -----------------------------
+
 //apply plugin: 'malfurion'
 apply plugin: 'com.android.application'
 //apply plugin: 'kotlin-android'
@@ -13,6 +51,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -24,19 +63,24 @@ android {
     sourceSets {
 //        main.java.srcDirs += 'src/main/kotlin'
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(":core")
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':core')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
-//    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.douban.frodo.leafs:subject:1.6.4.1'
+    compile 'com.android.support:multidex:1.0.1'
 }
 repositories {
     mavenCentral()
