--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-//    ext.kotlin_version = '1.1.1'
+    ext.kotlin_version = '1.1.1'
     ext.gradle_version = '2.3.2'
 
     repositories {
@@ -12,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
-//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        classpath 'com.douban.malfurion:plugin:1.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -38,7 +38,7 @@ allprojects {
 
 //apply plugin: 'malfurion'
 apply plugin: 'com.android.application'
-//apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android'
 apply plugin: com.douban.malfurion.PluginImpl
 
 android {
@@ -61,7 +61,7 @@ android {
     }
 
     sourceSets {
-//        main.java.srcDirs += 'src/main/kotlin'
+        main.java.srcDirs += 'src/main/kotlin'
     }
 
     dataBinding {
@@ -78,7 +78,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
-    //    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.douban.frodo.leafs:subject:1.6.4.1'
     compile 'com.android.support:multidex:1.0.1'
 }
